--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "ngx-countdown": "^3.2.0",
+    "ngx-socket-io": "^2.1.1",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
